fixed json package

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,2 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}, the telephone-pictionary game integration for Slack</p>
+<h1>Welcome to {{title}}</h1>
+<p>…the telephone-pictionary game integration for Slack</p>
