games object built for new games, subsequent rounds next

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,4 @@
 <h1>Welcome to {{title}}</h1>
 <p>…the telephone-pictionary game integration for Slack</p>
+
+<a href="/games/new">Start a new game!</a>
