working on post req from Slack

--- a/views/games/index.hbs
+++ b/views/games/index.hbs
@@ -1,7 +1,7 @@
 <h1>Games</h1>
 
 {{#each docs}}
-  show properties
+  show properties of games object
   <h2>id: {{_id}}</h2>
   <a href="/games/{{_id}}"><h2>message: {{message}}</h2></a>
   <h2>email: {{email}}</h2>
