--- a/views/games/show.hbs
+++ b/views/games/show.hbs
@@ -1,13 +1,16 @@
 <p>
   this shows what is in the doc for this game
 </p>
-
 <h2>id: {{_id}}</h2>
-<h2>message: {{message}}</h2>
-<h2>email: {{email}}</h2>
-<h2>next: {{next}}</h2>
-<h2>count: {{counter}}</h2>
-<h2>gameId: {{gameId}}</h2>
+<h2>team_id: {{team_id}}</h2>
+<h2>user_name: {{user_name}}</h2>
+<a href="/games/{{_id}}"><h2>text: {{text}}</h2></a>
+<h2>channel_id: {{channel_id}}</h2>
+<h2>channel_name: {{channel_name}}</h2>
+<h2>next: {{next}} (how to do this?)</h2>
+<h2>counter: {{counter}}</h2>
+<h2>gameId/timestamp: {{timestamp}}</h2>
+<h2>prompt: {{prompt}}</h2>
 <h2>draw prompt: {{draw}}</h2>
 <h2>write prompt: {{write}}</h2>
 
