--- a/views/games/new.hbs
+++ b/views/games/new.hbs
@@ -1,9 +1,9 @@
-
+<h1>New game!</h1>
 
 <form action="/games/update" method="post">
   <label for="message">Message or image</label>
-  <input type="text" name="message" id="message">
-  <label for="next">email of next user</label>
-  <input type="email" name="next" id="next">
+  <input type="text" name="text" id="message">
+  <label for="user">sent by: </label>
+  <input type="text" name="user_name" id="user">
   <input type="submit" value="Send">
 </form>
