--- a/views/games/new.hbs
+++ b/views/games/new.hbs
@@ -4,6 +4,6 @@
   <label for="message">Message or image</label>
   <input type="text" name="text" id="message">
   <label for="user">sent by: </label>
-  <input type="text" name="user_name" id="user">
+  <input type="text" name="user_id" id="user">
   <input type="submit" value="Send">
 </form>
