--- a/views/games/new.hbs
+++ b/views/games/new.hbs
@@ -1,6 +1,6 @@
 <h1>New game!</h1>
 
-<form action="/games/update" method="post">
+<form action="/games" method="post">
   <label for="message">Message or image</label>
   <input type="text" name="text" id="message">
   <label for="user">sent by: </label>
