now integrating new /reply command

--- a/views/games/show.hbs
+++ b/views/games/show.hbs
@@ -2,16 +2,16 @@
   this shows what is in the doc for this game
 </p>
 <h2>id: {{_id}}</h2>
-<h2>team_id: {{team_id}}</h2>
-<h2>user_name: {{user_name}}</h2>
+<!-- <h2>team_id: {{team_id}}</h2> -->
+<h2>user_id: {{user_id}}</h2>
 <h2>text: <a href="/games/{{_id}}">{{text}} </a></h2>
-<h2>channel_id: {{channel_id}}</h2>
-<h2>channel_name: {{channel_name}}</h2>
-<h2>next: {{next}} (how to do this?)</h2>
+<!-- <h2>channel_id: {{channel_id}}</h2> -->
+<!-- <h2>channel_name: {{channel_name}}</h2> -->
+<!-- <h2>next: {{next}} (how to do this?)</h2> -->
 <h2>counter: {{counter}}</h2>
-<h2>gameId/timestamp: {{timestamp}}</h2>
-<h2>prompt: {{prompt}}</h2>
-<h2>draw prompt: {{draw}}</h2>
-<h2>write prompt: {{write}}</h2>
+<!-- <h2>gameId/timestamp: {{timestamp}}</h2> -->
+<!-- <h2>prompt: {{prompt}}</h2> -->
+<!-- <h2>draw prompt: {{draw}}</h2> -->
+<!-- <h2>write prompt: {{write}}</h2> -->
 
 <a href="/games/{{_id}}/edit">next user</a>
