putNewMessage back in update route, render show page at end of game

--- a/views/games/show.hbs
+++ b/views/games/show.hbs
@@ -1,17 +1,13 @@
 <p>
-  this shows what is in the doc for this game
+  Your game!
 </p>
-<h2>id: {{_id}}</h2>
-<!-- <h2>team_id: {{team_id}}</h2> -->
-<h2>user_id: {{user_id}}</h2>
-<h2>text: <a href="/games/{{_id}}">{{text}} </a></h2>
-<!-- <h2>channel_id: {{channel_id}}</h2> -->
-<!-- <h2>channel_name: {{channel_name}}</h2> -->
-<!-- <h2>next: {{next}} (how to do this?)</h2> -->
-<h2>counter: {{counter}}</h2>
-<!-- <h2>gameId/timestamp: {{timestamp}}</h2> -->
-<!-- <h2>prompt: {{prompt}}</h2> -->
-<!-- <h2>draw prompt: {{draw}}</h2> -->
-<!-- <h2>write prompt: {{write}}</h2> -->
 
-<a href="/games/{{_id}}/edit">next user</a>
+<h2>{{round1}}</h2>
+<img src="{{round2}}" alt="" />
+<h2>{{round3}}</h2>
+<img src="{{round4}}" alt="" />
+<h2>{{round5}}</h2>
+<img src="{{round6}}" alt="" />
+<h2>{{round7}}</h2>
+<img src="{{round8}}" alt="" />
+<h2>{{round9}}</h2>
