--- a/views/games/index.hbs
+++ b/views/games/index.hbs
@@ -2,13 +2,7 @@
 <h2>Show properties of games object</h2>
 {{#each docs}}
   <h2>id: {{_id}}</h2>
-  <!-- <h2>team_id: {{team_id}}</h2> -->
-  <h2>user_id: {{user_id}}</h2>
-  <h2>text: <a href="/games/{{_id}}">{{text}}</a></h2>
-  <!-- <h2>channel_did: {{channel_id}}</h2> -->
-  <!-- <h2>channel_name: {{channel_name}}</h2> -->
-  <!-- <h2>next: {{next}} (how to do this?)</h2> -->
-  <h2>counter: {{counter}}</h2>
-  <!-- <h2>gameId/timestamp: {{timestamp}}</h2> -->
-  <!-- <h2>prompt: {{prompt}}</h2> -->
+  <h2>id: <a href="/games/{{_id}}">{{round1}}</a></h2>
+  <h2>first sentence: {{round1}}</h2>
+  <h2>last sentence: {{round5}}</h2>
 {{/each}}
