--- a/views/games/show.hbs
+++ b/views/games/show.hbs
@@ -1,6 +1,6 @@
-<p>
-  Your game!
-</p>
+<h3><a href="/games">ALL GAMES</a></h3>
+
+<h1>{{round1}} game!</h1>
 
 <h2>{{round1}}</h2>
 <img src="{{round2}}" alt="" />
