--- a/views/games/new.hbs
+++ b/views/games/new.hbs
@@ -1,9 +1,11 @@
-<h1>New game!</h1>
+<main>
+  <h1>New game!</h1>
 
-<form action="/games" method="post">
-  <label for="message">Message or image</label>
-  <input type="text" name="text" id="message">
-  <label for="user">sent by: </label>
-  <input type="text" name="user_id" id="user">
-  <input type="submit" value="Send">
-</form>
+  <form action="/games" method="post">
+    <label for="message">Message or image</label>
+    <input type="text" name="text" id="message">
+    <label for="user">sent by: </label>
+    <input type="text" name="user_id" id="user">
+    <input type="submit" value="Send">
+  </form>
+</main>
