--- a/views/games/show.hbs
+++ b/views/games/show.hbs
@@ -1,13 +1,17 @@
-<h3>Back to <a href="/games">ALL GAMES</a></h3>
+<main>
+  <h3>Back to <a href="/games">ALL GAMES</a></h3>
+  <section class="game">
+    <h1>{{round1}}…</h1>
 
-<h1>{{round1}} game!</h1>
+    <h2 class="one">{{round1}}…</h2>
+    <img class="two" src="{{round2}}" alt="" />
+    <h2 class="three">{{round3}}…</h2>
+    <img class="four" src="{{round4}}" alt="" />
+    <h2 class="five">{{round5}}.</h2>
+    <img class="six" src="{{round6}}" alt="" />
+    <h2 class="seven">{{round7}}</h2>
+    <img class="eight" src="{{round8}}" alt="" />
+    <h2 class="nine">{{round9}}</h2>
+  </section>
 
-<h2>{{round1}}</h2>
-<img src="{{round2}}" alt="" />
-<h2>{{round3}}</h2>
-<img src="{{round4}}" alt="" />
-<h2>{{round5}}</h2>
-<img src="{{round6}}" alt="" />
-<h2>{{round7}}</h2>
-<img src="{{round8}}" alt="" />
-<h2>{{round9}}</h2>
+</main>
