--- a/views/games/index.hbs
+++ b/views/games/index.hbs
@@ -1,6 +1,21 @@
-<h1>Games</h1>
-{{#each docs}}
-  <h2>Title: <a href="/games/{{_id}}">{{round1}}</a></h2>
-  <h3>first sentence: {{round1}}</h3>
-  <h3>last sentence: {{round5}}</h3>
-{{/each}}
+<main>
+  <h1>Games</h1>
+  <section>
+
+  <div class="game">
+    <img class="thumb" src="http://placehold.it/125x110" alt="" />
+    <h2>Title: <a href="/games/{{_id}}">{{round1}}</a></h2>
+    <div class="summary">
+      <h3>first sentence: {{round1}}</h3>
+      <h3>last sentence: {{round5}}</h3>
+    </div>
+  </div>
+
+  </section>
+  <!-- {{#each docs}}
+-->
+
+
+  <!-- {{/each}}
+-->
+</main>
