--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -13,6 +13,7 @@ body {
   .game {
     background-color: rgba(225, 225, 225, .8);
     padding: 3vw;
+    margin-bottom: 1em;
   }
 
   img.thumb {
