--- a/views/games/index.hbs
+++ b/views/games/index.hbs
@@ -5,10 +5,9 @@
 {{#each docs}}
   <div class="game">
     <img class="thumb" src="http://placehold.it/125x110" alt="" />
-    <h2>Title: <a href="/games/{{_id}}">{{round1}}</a></h2>
+    <h2>From: <a href="/games/{{_id}}">{{round1}}</a></h2>
     <div class="summary">
-      <h3>first sentence: {{round1}}</h3>
-      <h3>last sentence: {{round5}}</h3>
+      <h3>to: {{round5}}</h3>
     </div>
   </div>
 
