--- a/views/games/show.hbs
+++ b/views/games/show.hbs
@@ -1,15 +1,15 @@
 <main>
-  <h3>Back to <a href="/games">ALL GAMES</a></h3>
+  <h3>&#8610;<a href="/games">ALL GAMES</a></h3>
   <section class="game">
 
     <h2 class="one">{{round1}}…</h2>
-    <img class="two" src="{{round2}}" alt="" />
+    <img class="two show" src="{{round2}}" alt="" />
     <h2 class="three">{{round3}}…</h2>
-    <img class="four" src="{{round4}}" alt="" />
+    <img class="four show" src="{{round4}}" alt="" />
     <h2 class="five">{{round5}}.</h2>
-    <img class="six" src="{{round6}}" alt="" />
+    <img class="six show" src="{{round6}}" alt="" />
     <h2 class="seven">{{round7}}</h2>
-    <img class="eight" src="{{round8}}" alt="" />
+    <img class="eight show" src="{{round8}}" alt="" />
     <h2 class="nine">{{round9}}</h2>
   </section>
 
