--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -3,15 +3,15 @@
 html {font-size: 1em;}
 
 body {
-  background-color: white;
+  background-color: $background-color;
   font-family: Lato, sans-serif;
   font-weight: 300;
   line-height: 1.45;
-  color: #333;
+  color: white;
 }
 
 a {
-  color: darkgray;
+  color: $lighter-color;
   text-decoration: none;
 }
 
@@ -24,6 +24,7 @@ h1, h2, h4 {
 }
 
 h1 {
+  color: $contrast;
   margin-top: 0;
   font-size: 2.074em;
 }
