--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,22 +32,22 @@ body {
   }
 
   .show {
-    height: 75vw;
+    height: 65vh;
   }
 
   .two {
-    margin-left: 15vw;
+    margin-left: 10vw;
   }
 
   .three {
-    margin-left: 30vw;
+    margin-left: 20vw;
   }
 
   .four {
-    margin-left: 45vw;
+    margin-left: 30vw;
   }
 
   .five {
-    margin-left: 60vw;
+    margin-left: 40vw;
   }
 }
