--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,5 +1,5 @@
-$background-color: #7FACE8;
-$transparent-color: rgba(64, 232, 222, .80);
+$background-color: #BCDEFF;
+$transparent-color: rgba(64, 232, 222, .30);
 $lighter-color: #98E5FF;
 $light-color2: #C0C8FF;
 $contrast: #FF7671;
