--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -83,7 +83,7 @@ html {
   font-size: 1em; }
 
 body {
-  background-color: #BCDEFF;
+  background-color: #9dc9e0;
   font-family: Lato, sans-serif;
   font-weight: 300;
   line-height: 1.45;
