--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,5 +1,5 @@
-$background-color: #b3e5ff);
-$transparent-color: rgba(222 180 64 .80);
+$background-color: #b3e5ff;
+$transparent-color: rgba(222, 180, 64, .80);
 $lighter-color: #98E5FF;
 $light-color2: #C0C8FF;
 $contrast: #FF7671;
