colors and logo

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -60,6 +60,9 @@ main {
 section {
   position: relative; }
 
+.logo {
+  float: left; }
+
 .game {
   background-color: rgba(155, 227, 187, 0.3);
   padding: 3vw;
