--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,4 +1,4 @@
-$background-color: #d1ecff;
+$background-color: rgba(190, 229, 255, .7);
 $transparent-color: rgba(155, 227, 187, .30);
 $lighter-color: #98E5FF;
 $light-color2: #C0C8FF;
