--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -16,6 +16,10 @@ section {
   position: relative;
 }
 
+.logo{
+  float: left;
+}
+
 .game {
   background-color: $transparent-color;
   padding: 3vw;
