--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -22,7 +22,7 @@ section {
 }
 
 .game {
-  background-color: $transparent-color;
+  background-color: $background-color;
   padding: 3vw;
   margin-bottom: 1em;
 }
