--- a/views/games/index.hbs
+++ b/views/games/index.hbs
@@ -1,7 +1,11 @@
 <main>
+  <header>
 
-  <h1>Slaxophone Games</h1>
-  <img class="logo" src="/images/logo.png" alt="" />
+    <img class="logo" src="/images/logo.png" alt="" />
+    <h1>Slaxophone Games</h1>
+
+  </header>
+
   <section>
 
 {{#each docs}}
