--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,5 +1,6 @@
-$background-color: rgba(234, 255, 255, .7);
+$background-color: rgba(238, 255, 255, .7);
 $transparent-color: rgba(155, 227, 187, .30);
 $lighter-color: #98E5FF;
 $light-color2: #C0C8FF;
 $contrast: #FF7671;
+$yellow: rgb(222, 180, 64);
