--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -3,7 +3,7 @@
 html {font-size: 1em;}
 
 body {
-  background-color: $lighter-color;
+  background-color: $background-color;
   font-family: Lato, sans-serif;
   font-weight: 300;
   line-height: 1.45;
@@ -24,8 +24,9 @@ h1, h2, h4 {
 }
 
 h1 {
-  color: white;
-  margin-top: 0;
+  position: relative;
+  color: $yellow;
+  top: 80px;
   font-size: 2.074em;
 }
 
