--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -53,7 +53,7 @@ body {
   width: 100vw; }
 
 main {
-  padding: 5vw;
+  padding: 10vw 5vw;
   margin: 0 auto;
   width: 85vw; }
 
@@ -61,17 +61,17 @@ section {
   position: relative; }
 
 header {
+  height: 125px;
   position: relative; }
 
 .logo {
   position: relative;
   float: left;
   width: 125px;
-  bottom: 85px;
   margin-right: 1em; }
 
 .game {
-  background-color: rgba(222, 180, 64, 0.3);
+  background-color: rgba(155, 227, 187, 0.3);
   padding: 3vw;
   margin-bottom: 1em; }
 
