more spacing, colors

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -53,7 +53,7 @@ body {
   width: 100vw; }
 
 main {
-  padding: 10vw 5vw;
+  padding: 5vw;
   margin: 0 auto;
   width: 85vw; }
 
@@ -61,7 +61,7 @@ section {
   position: relative; }
 
 header {
-  height: 125px;
+  height: 135px;
   position: relative; }
 
 .logo {
@@ -71,7 +71,7 @@ header {
   margin-right: 1em; }
 
 .game {
-  background-color: rgba(155, 227, 187, 0.3);
+  background-color: rgba(155, 227, 187, 0.7);
   padding: 3vw;
   margin-bottom: 1em; }
 
@@ -104,7 +104,7 @@ html {
   font-size: 1em; }
 
 body {
-  background-color: rgba(238, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   font-family: Lato, sans-serif;
   font-weight: 300;
   line-height: 1.45;
