--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,7 +7,7 @@ body {
 }
 
 main {
-  padding: 10vw 5vw;
+  padding: 5vw;
   margin: 0 auto;
   width: 85vw;
 }
@@ -17,7 +17,7 @@ section {
 }
 
 header {
-  height: 125px;
+  height: 135px;
   position: relative;
 }
 
