colors and spacing

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -29,7 +29,7 @@ header {
 }
 
 .game {
-  background-color: $transparent-color;
+  background-color: $yellow;
   padding: 3vw;
   margin-bottom: 1em;
 }
