--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -71,7 +71,7 @@ header {
   margin-right: 1em; }
 
 .game {
-  background-color: rgba(155, 227, 187, 0.7);
+  background-color: #deb440;
   padding: 3vw;
   margin-bottom: 1em; }
 
@@ -122,7 +122,8 @@ h1, h2, h4 {
   font-weight: inherit;
   line-height: 1.2; }
 
-h1 {
+header h1 {
+  top: 85px;
   position: relative;
   color: #deb440;
   font-size: 2.074em; }
