--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -23,10 +23,13 @@ h1, h2, h4 {
   line-height: 1.2;
 }
 
-h1 {
-  position: relative;
-  color: $yellow;
-  font-size: 2.074em;
+header{
+  h1 {
+    top: 85px;
+    position: relative;
+    color: $yellow;
+    font-size: 2.074em;
+  }
 }
 
 h2 {
