--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -71,7 +71,7 @@ header {
   margin-right: 1em; }
 
 .game {
-  background-color: #deb440;
+  background-color: rgba(254, 206, 73, 0.7);
   padding: 3vw;
   margin-bottom: 1em; }
 
