--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -32,6 +32,7 @@ header {
   background-color: $transparent-yellow;
   padding: 3vw;
   margin-bottom: 1em;
+  border: 2px solid black;
 }
 
 .thumb {
