--- a/views/games/show.hbs
+++ b/views/games/show.hbs
@@ -7,10 +7,10 @@
     <h2 class="three">{{round3}}…</h2>
     <img class="four show" src="{{round4}}" alt="" />
     <h2 class="five">{{round5}}.</h2>
-    <img class="six show" src="{{round6}}" alt="" />
+    <!-- <img class="six show" src="{{round6}}" alt="" />
     <h2 class="seven">{{round7}}</h2>
     <img class="eight show" src="{{round8}}" alt="" />
-    <h2 class="nine">{{round9}}</h2>
+    <h2 class="nine">{{round9}}</h2> -->
   </section>
 
 </main>
