--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -4,4 +4,4 @@ $lighter-color: #98E5FF;
 $light-color2: #C0C8FF;
 $contrast: #FF7671;
 $yellow: rgb(222, 180, 64);
-$transparent-yellow: rgba(230, 206, 240, .5)
+$transparent-yellow: rgba(230, 206, 240, .5);
