--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,4 +1,4 @@
-$background-color: rgba(255, 255, 255, .3);
+$background-color: rgba(219, 249, 255, 1);
 $transparent-color: rgba(155, 227, 187, .20);
 $lighter-color: #98E5FF;
 $light-color2: #C0C8FF;
