--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -29,13 +29,15 @@ header {
 }
 
 .game {
-  background-color: $transparent-yellow;
   padding: 3vw;
+  height: 200px;
+  background-color: $transparent-yellow;
   margin-bottom: 1em;
   border: 2px solid black;
 }
 
 .thumb {
+  border: 2px solid black;
   float: left;
   width: 125px;
   height: 110px;
