--- a/sass/_type.scss
+++ b/sass/_type.scss
@@ -3,7 +3,7 @@
 html {font-size: 1em;}
 
 body {
-  background-color: white;
+  background-color: $background-color;
   font-family: Lato, sans-serif;
   font-weight: 300;
   line-height: 1.45;
