--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -37,7 +37,7 @@ header {
 }
 
 .thumb {
-  border: 2px solid black;
+  // border: 2px solid black;
   float: left;
   width: 125px;
   height: 110px;
