--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -30,17 +30,16 @@ header {
 
 .game {
   padding: 3vw;
-  height: 200px;
   background-color: $transparent-yellow;
   margin-bottom: 1em;
   border: 2px solid black;
 }
 
 .thumb {
-  // border: 2px solid black;
+  border: 2px solid black;
   float: left;
   width: 125px;
-  height: 110px;
+  height: 90px;
   overflow: hidden;
   margin-right: 2em;
   img {
