fixing colors, again

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -30,7 +30,7 @@ header {
 
 .game {
   padding: 3vw;
-  background-color: $transparent-yellow;
+  background-color: $transparent-color;
   margin-bottom: 1em;
   border: 2px solid black;
 }
