adding yellow for strong

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,7 +1,7 @@
-$background-color: rgba(219, 249, 255, 1);
-$transparent-color: rgba(255, 255, 255, .20);
+$background-color: #81B1AA;
+$transparent-color: rgba(255, 255, 255, .7);
 $lighter-color: #98E5FF;
 $light-color2: #C0C8FF;
 $contrast: #FF7671;
-$yellow: rgb(222, 180, 64);
+$yellow: #CC944E;
 $transparent-yellow: rgba(255, 226, 95, .5);
