--- a/views/games/index.hbs
+++ b/views/games/index.hbs
@@ -2,7 +2,7 @@
   <header>
 
     <img class="logo" src="/images/logo.png" alt="" />
-    <h1>Slaxophone Games</h1>
+    <h1><strong>Slaxophone Games</strong></h1>
 
   </header>
 
@@ -13,9 +13,9 @@
     <div class="thumb">
       <img src="{{round2}}" alt="" />
     </div>
-    <h2>From: <a href="/games/{{_id}}">{{round1}}</a></h2>
+    <h2><strong>From:</strong> <a href="/games/{{_id}}">{{round1}}</a></h2>
     <div class="summary">
-      <h3>to: {{round5}}</h3>
+      <h3><strong>to:</strong> {{round5}}</h3>
     </div>
   </div>
 
