--- a/views/games/show.hbs
+++ b/views/games/show.hbs
@@ -1,5 +1,5 @@
 <main>
-  <h1>&#8610;  <a href="/games">ALL GAMES</a></h1>
+  <h1><strong>&#8610;  </strong><a href="/games">ALL GAMES</a></h1>
   <section class="game">
 
     <h2 class="one">{{round1}}…</h2>
