--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -1,5 +1,5 @@
 $background-color: #81B1AA;
-$transparent-color: rgba(255, 255, 255, .7);
+$transparent-color: rgba(255, 255, 255, 0.7);
 $lighter-color: #98E5FF;
 $light-color2: #C0C8FF;
 $contrast: #FF7671;
